<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/manual_instrumentation_api_selection"
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_instrumentation_api_selection_title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/apiVariantRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manual_instrumentation_api_selection">

        <RadioButton
            android:id="@+id/latestApi"
            style="@style/RadioOptionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_api_option"
            android:layout_marginEnd="20dp" />

        <RadioButton
            android:id="@+id/legacyApi"
            style="@style/RadioOptionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legacy_api_option"/>

    </RadioGroup>

        <TextView
            android:id="@+id/synchronousGet"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/synchronous_get"
            app:layout_constraintTop_toBottomOf="@id/apiVariantRadioGroup" />

        <TextView
            android:id="@+id/asynchronousGet"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asynchronous_get"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/synchronousGet" />

        <TextView
            android:id="@+id/concurrentAsynchronousGet"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concurrent_asynchronous_get"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/asynchronousGet" />

        <TextView
            android:id="@+id/parentContextPropagationInAsyncGet"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parent_context_propagation_async_get"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/concurrentAsynchronousGet" />

        <TextView
            android:id="@+id/unSuccessfulGet"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unsuccessful_get"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/parentContextPropagationInAsyncGet" />

        <TextView
            android:id="@+id/retryRequest"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry_request"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/unSuccessfulGet" />

        <TextView
            android:id="@+id/multipleHeaders"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple_headers"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/retryRequest" />

        <TextView
            android:id="@+id/serverTimingHeaderInResponse"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_timing_header_in_response"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/multipleHeaders" />

        <TextView
            android:id="@+id/postMarkdown"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_markdown"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/serverTimingHeaderInResponse" />

        <TextView
            android:id="@+id/postStreaming"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_streaming"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/postMarkdown" />

        <TextView
            android:id="@+id/postFile"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_file"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/postStreaming" />

        <TextView
            android:id="@+id/postFormParameters"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_form_parameters"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/postFile" />

        <TextView
            android:id="@+id/postMutlipartRequest"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_multipart_request"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/postFormParameters" />

        <TextView
            android:id="@+id/networkError"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_error"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/postMutlipartRequest" />

        <TextView
            android:id="@+id/responseCaching"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_caching"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/networkError" />

        <TextView
            android:id="@+id/canceledCall"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canceled_call"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/responseCaching"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>